# tetry

./: Cargo.toml
assets/: sprites.aseprite
src/: field.rs  main.rs  tetris.rs
