[package]
name = "tetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.1.0"

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
	"bevy_asset",
	"bevy_winit",
	"bevy_render",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_text",
	"multi-threaded",
	"png",
	"x11",
	"wayland",
]

[profile.dev.package."*"]
opt-level = 3
